--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "doctrine/dbal": "^2.5",
         "zizaco/entrust": "^1.4",
         "zizaco/confide": "^4.3",
-        "barryvdh/laravel-debugbar": "^2.0"
+        "barryvdh/laravel-debugbar": "^2.0",
+        "yohang/finite": "^1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
