--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "zizaco/entrust": "^1.4",
         "zizaco/confide": "^4.3",
         "barryvdh/laravel-debugbar": "^2.0",
-        "yohang/finite": "^1.0"
+        "yohang/finite": "^1.0",
+        "almasaeed2010/adminlte": "^2.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
