--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,8 @@
             "php artisan clear-compiled"
         ],
         "post-update-cmd": [
-            "php artisan optimize"
+            "php artisan optimize",
+            "php artisan ide-helper:generate"
         ],
         "post-root-package-install": [
             "php -r \"copy('.env.example', '.env');\""
